fixed issue with border radius and outline for Safari, improved adaptive

--- a/styles/base/_duplicate.scss
+++ b/styles/base/_duplicate.scss
@@ -9,7 +9,8 @@
         background-repeat: no-repeat;
         background-position: center;
         border-radius: 50%;
-        outline: 3px solid white;
+        border: 3px solid white;
+        box-sizing: content-box;
 }
 %flex-center {
         display: flex;
