--- a/styles/main.scss
+++ b/styles/main.scss
@@ -149,13 +149,13 @@ a {
     font-size: 14px;
     padding: 12px 19px;
     border-radius: 40px;
+    -webkit-border-radius: 40px;
     &--purple {
         background-color: $btns-color;
-    
+        border: 3px solid $btns-color;
+        box-sizing: content-box;
         transition: color 0.7s, background-color 0.7s;
         &:hover {
-            outline: 2px solid $btns-color;
-            outline-offset: -5px;
             background-color: #fff;
             color: $btns-color;
         }
@@ -411,8 +411,6 @@ a {
         margin-left: 3px;
         &:hover {
             background-color: $btns-color;
-            outline: 2px solid white;
-            outline-offset: -5px;
             color: white;
         }
     }
@@ -491,6 +489,7 @@ a {
                 max-width: 100%;
                 height: 100%;
                 border-radius: 50%;
+                -webkit-border-radius: 50%;
                 overflow: hidden;
             }
         }
@@ -576,8 +575,8 @@ a {
         margin: 10px 10px 0 10px;
         padding-top: 10px;
         row-gap: 20px;
-        column-gap: 7px;
-        grid-template-columns: repeat(3, 33.333%);
+        justify-content: space-between;
+        grid-template-columns: repeat(3, 32.333%);
         grid-template-rows: repeat(3, 310px);
         .item {
             @extend %flex-center;
@@ -700,8 +699,6 @@ a {
         }
         &__gallery {
             row-gap: 20px;
-            column-gap: 7px;
-            grid-template-columns: repeat(3, 33.333%);
             grid-template-rows: repeat(3, 250px);
             .item__title {
                 font-size: 18px;
@@ -818,13 +815,10 @@ a {
     }
     &__form {
         margin: 0 auto;
-        width: 482px;
+        width: 490px;
         .form-create {
             &__btn {
                 padding: 12px 26px 10px 32px;
-                &:hover {
-                    outline-offset: -2px;
-                }
             }
             &__input {
                 padding: 12px 66px 10px 11px;
